# NessMuxer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_n148.bat  build_and_test.bat  build_and_test.sh  convert_video.bat  grab_n148_frame.bat
docs/: N148-Benchmark-Baseline-v0.1.md  N148-Benchmark-Matrix.md  N148-Bitstream-Spec-v0.1.md  N148-CABAC-Spec-v0.1.md  N148-Container-Mapping-v0.1.md  N148-FASE7-ESTADO-ATUAL.md  N148-Syntax-Elements-v0.1.md  N148-Test-Vectors.md
ffmpeg-n148/: PHASE10_3_WINDOWS.md  README.md  n148_decoder.c  n148_parser.c
include/: ness_muxer.h
lib/n148dec/: CMakeLists.txt  n148dec.c  n148dec.h
src/: avc_utils.c  avc_utils.h  buffered_io.c  buffered_io.h  ebml_writer.c  ebml_writer.h  mf_encoder.c  mf_encoder.h  mkv_defs.h  mkv_muxer.c  mkv_muxer.h  ness_muxer.c
src/codec/: codec.h
src/codec/avc/: avc_codec.c  avc_codec.h
src/codec/n148/: n148_bitstream.c  n148_bitstream.h  n148_codec.c  n148_codec.h  n148_codec_private.c  n148_codec_private.h  n148_spec.h
src/common/: interpolation.c  interpolation.h  motion_search.c  motion_search.h  motion_search_qpel.c  motion_search_qpel.h  n148_metrics.c  n148_metrics.h  n148_tables.c  n148_tables.h
src/common/entropy/: n148_binarization.c  n148_binarization.h  n148_cabac.c  n148_cabac.h  n148_cabac_binarization.c  n148_cabac_binarization.h  n148_cabac_contexts.c  n148_cabac_contexts.h  n148_cabac_engine.c  n148_cabac_engine.h  n148_cabac_syntax.c  n148_cabac_syntax.h  n148_cabac_tables.c  n148_cabac_tables.h  n148_cavlc.c  n148_cavlc.h  n148_contexts.h
src/common/x86/: n148_pixel_sse2.h
src/decoder/n148/: n148_decoder.c  n148_decoder.h  n148_dpb.c  n148_dpb.h  n148_frame_recon.c  n148_frame_recon.h  n148_motion.c  n148_motion.h  n148_parser.c  n148_parser.h
src/encoder/: encoder.c  encoder.h  mf_encoder_backend.c  nvenc_encoder.c  vtbox_encoder.c  x264_encoder.c
src/encoder/n148/: n148_encoder.c  n148_encoder.h  n148_entropy_enc_cavlc.c  n148_entropy_enc_cavlc.h  n148_frame_recon.c  n148_inter.c  n148_inter.h  n148_intra.c  n148_intra.h  n148_profiles.c  n148_profiles.h  n148_quant.c  n148_quant.h  n148_ratecontrol.c  n148_ratecontrol.h  n148_ratecontrol_basic.c  n148_ratecontrol_basic.h  n148_reorder.c  n148_reorder.h  n148_slice_plan.c  n148_slice_plan.h  n148_transform.c  n148_transform.h
test/: test_avc.c  test_ebml.c  test_encoder.c  test_full_pipeline.c  test_muxer_only.c  test_n148_cabac.c  test_n148_cabac_conformance_small.c  test_n148_cabac_engine.c  test_n148_cabac_slice_roundtrip.c  test_n148_codec.c  test_n148_encoder.c  test_n148_gop_planner.c  test_n148_interpolation.c  test_n148_metrics.c  test_n148_mux.c  test_n148_phase7_epic.c  test_n148_profiles.c  test_n148_ratecontrol.c  test_n148_reorder.c  test_n148_roundtrip.c  test_n148_slice_plan.c  test_n148_tools.c
tools/: n148_framegrab.c  n148_regression_bench.c  n148diff.c  n148dump.c  n148enc.c  n148inspect.c  nessmux.c  nessmux_bench.c  nessmux_validate.c
